--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>JUDUL KTI</h1>
+<marquee>selamat datang di website pembuatan kti 2024</marquee>
 <hr>
 <h2>A. Judul Penelitian</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
