--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<title>kania</title>
 </head>
 <body>
-<h1>JUDUL KTI</h1>
+<h1>Kepercayaan dan Budaya Manusia Pawon: Studi Temuan Artefak dan
+Kerangka Manusia Pada Kubur Prasejarah di Gua Pawon, Kampung
+Cibukur, Desa Gunungmasigit</h1>
+
 <marquee>selamat datang di website pembuatan kti 2024</marquee>
 <hr>
 <h2>A. Judul Penelitian</h2>
