penambahan abstrak dan bab.1 pendahuluan

--- a/index.html
+++ b/index.html
@@ -12,40 +12,77 @@ Cibukur, Desa Gunungmasigit</h1>
 
 <marquee>selamat datang di website pembuatan kti 2024</marquee>
 <hr>
-<h2>A. Judul Penelitian</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h2>ABSTRAK</h2>
+<p>Penemuan kerangka dan artefak di Gua Pawon, yang terletak di Kabupaten Bandung Barat,
+Jawa Barat menunjukkan adanya bukti kebudayaan awal di daerah tersebut. Gua Pawon
+menyimpan berbagai bukti kebudayaan yang memberikan informasi kepada kita tentang
+praktik spiritual dan budaya masyarakat masa lalu, seperti penggunaan perhiasan, teknik
+berburu, dan praktik tradisi penguburan yang berkaitan dengan kepercayaan mereka pada
+kehidupan setelah mati. Melalui penelitian ini kami berusaha menggali hasil-hasil temuan
+arkeolog dengan menggunakan metode sejarah yang dimulai dengan heuristik sumber, kritik
+sumber, interpretasi temuan arkeologi dan penulisan. Berdasarkan hasil temuan arkeologi dan
+analisis sumber lain yang berkaitan dengan kehidupan prasejarah, kami menguraikan bentuk
+kepercayaan yang ada pada Manusia Pawon melalui temuan kuburan prasejarah dan
+kebudayaan Manusia Pawon melalui temuan artefak yang berkaitan dengan kegiatan Manusia
+Pawon di masa lampau. Melalui penelitian ini kami menemukan dua garis besar bahwa
+Manusia Pawon pada masa prasejarah sudah mengenal kepercayaan akan kehidupan setelah
+mati melalui posisi dan orientasi kerangka dalam kubur prasejarah. Manusia Pawon pun
+memiliki daya jelajah yang luas pada masa itu dengan ditemukannya artefak gigi hiu yang
+jauh dari habitat Gua Pawon.</p>
+<p>Kata Kunci: Kebiasaan, Gua Pawon, Kebudayaan</P>
 
-<h2>B. Latar Belakang</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h2>BAB 1. BPENDAHULUAN</h2>
+<h3>1.1. Latar Belakang</h3>
+<p>Gua Pawon, yang terletak di Kampung Cibukur, Gunung Masigit, Kecamatan Cipatat,
+Kabupaten Bandung Barat, merupakan situs prasejarah yang memberikan banyak sumbangan
+mengenai kebudayaan awal di Jawa Barat. Di dalam gua ini, ditemukan sejumlah kerangka manusia
+dan artefak yang memberikan petunjuk tentang kehidupan manusia prasejarah. Kontribusi arkeologis
+dari Gua Pawon memberikan wawasan berharga mengenai kehidupan prasejarah, terutama dan
+memperkaya data mengenai sejarah awal manusia di Indonesia. Keberadaan Gua Pawon di antara
+gua-gua yang pernah disurvei dan diteliti selama ini memberikan arti yang sangat penting dalam
+pemahaman sejarah masa lalu di sekitar Jawa Barat. Dalam hal ini data tentang temuan kubur di Gua
+Pawon merupakan satu penemuan penting dalam penelitian prasejarah di Indonesia, karena selama ini
+temuan yang demikian umumnya hanya ditemukan di wilayah Jawa Tengah dan Jawa Timur.</p>
+<p>Sampai saat ini, Gua Pawon masih merupakan salah satu gua yang memiliki peninggalan budaya
+prasejarah lengkap yang pernah ditemukan di kawasan Jawa Barat (Yondri dan Siregar, 2013). Gua
+Pawon merupakan salah satu situs prasejarah yang menjadi tanda adanya kebudayaan manusia awal di
+wilayah Jawa Barat. Kebudayaan di Gua Pawon ditandakan dengan penemuan berupa tulang-belulang
+dan artefak-artefak di wilayah sekitar Gua Pawon. Berdasarkan hasil temuan berupa rangka dan
+artefak tersebut, para arkeolog dapat menyimpulkan manusia membentuk sebuah kebudayaan di
+wilayah tersebut. Penelitian di Gua Pawon telah dilakukan oleh Balai Arkeologi Bandung melalui
+serangkaian kegiatan ekskavasi yang ditempatkan terutama di bagian tengah kawasan gua. Kegiatan
+tersebut berhasil menemukan berbagai tinggalan budaya secara berurut dari permukaan tanah hingga
+kedalaman penggalian, baik berupa sisa budaya yang terkait dengan kehidupan masa kini maupun
+dari kehidupan masa lalu. (Yondri dan Siregar, 2016). Ditemukannya model penguburan dan
+penggunaan perhiasan pada temuan kerangka Manusia Pawon bukan hanya menjadi bukti adanya
+kehidupan, melainkan kebudayaan awal yang berkembang di wilayah Jawa Barat pada masa
+prasejarah. Penemuan artefak dan bukti kehidupan di Gua Pawon dapat memberi petunjuk bagi
+peneliti tentang bagaimana pola hidup dan interaksi sosial yang terjadi di masa lampau. Peneliti yakin
+setiap penelitian baru tentang objek ini dapat menambah gambaran mengenai evolusi budaya awal di
+kawasan Jawa Barat. Penelitian ini juga merupakan wujud dari rasa bangga dan memiliki citra budaya
+yang dimiliki bangsa. Ditemukannya artefak dan bukti kehidupan di Gua Pawon dapat memperluas
+pengetahuan mengenai pola hidup dan interaksi sosial yang terjadi di masa lampau. Penelitian
+terhadap hasil temuan kubur prasejarah di Gua Pawon diharapkan dapat memberikan tambahan
+pengetahuan baru bagi pemahaman tentang penguburan di dalam gua, khususnya penguburan dengan
+posisi terlipat yang tentu bisa diidentifikasi bentuk kepercayaan apa yang dimiliki Manusia Pawon
+pada masa itu.</p>
 
-<h2>C. Rumusan Masalah</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h3>1.2. Rumusan Masalah</h3>
+<p>1. Bagaimana bentuk kepercayaan Manusia Gua pawon berdasarkan temuan kerangka pada
+kubur prasejarah?</p>
+<p>2. Bagaimana bentuk budaya manusia Gua Pawon berdasarkan temuan artefak?</p>
+<h3>1.3. Tujuan Penulisan</h3>
+<P>1. Menguraikan bentuk kepercayaan kepercayaan Manusia Gua pawon berdasarkan temuan
+kerangka pada kubur prasejarah.</P> <p>2. Menguraikan bentuk budaya manusia Gua Pawon berdasarkan temuan artefak.</p>
+<h3>1.4. Manfaat penelitian</h3>
+<p>1. Mampu berkontribusi kepada sejarah kebudayaan di Indonesia terlebih lagi di wilayah Jawa
+Barat dan membantu membangun gambaran bagaimana suatu kebudayaan berkembang di
+wilayah Jawa Barat.</p> <p>2. Melalui penelitian ini diharapkan dapat membangun rasa cinta bangsa kepada tanah air.
+Kekayaan sejarah mampu membuat suatu bangsa menjadi bangga karena memiliki citra dan
+keunikannya tersendiri.</p> <p>3. Bagi pelajar penelitian ini memiliki manfaat di antaranya dapat memudahkan siswa-siswi
+mengetahui sejarah dan kebudayaan lokal di sekitar Jawa Barat dan memberikan pandangan
+baru mengenai bagaimana suatu struktur kemasyarakatan dapat terbentuk.</p> <p>4. Bagi masyarakat adanya penelitian ini diharapkan menambah khasanah pengetahuan manusia
+purba. Selain itu masyarakat dapat memperbaiki kebiasaan yang memiliki potensi buruk
+kepada lingkungan cagar budaya.</p>
 </body>
 </html>
